kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: drew-robert-site-service
  namespace: drew-robert-site
spec:
  type: ClusterIP
  ports:
    - name: dr-site-port
      port: 2600
      protocol: TCP
      targetPort: 3000
  selector:
    app: drew-robert-site
