kubernetes/Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drew-robert-site-ingress
  namespace: drew-robert-site
spec:
  rules:
    - host: drewrobert.com
      http:
        paths:
          - path: /
            backend:
              serviceName: drew-robert-site-service
              servicePort: dr-site-port
          - path: /api
            backend:
              serviceName: drew-robert-api-service
              servicePort: dr-api-port
          - path: /redcycle
            backend:
              serviceName: redcycle-service
              servicePort: redcycle-port
